--- a/Gun01/index3.html
+++ b/Gun01/index3.html
@@ -13,8 +13,7 @@
     <h4>Başlık 4</h4>
     <h5>Başlık 5</h5>
     <h6>Başlık 6</h6>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui velit ducimus delectus pariatur aspernatur. Ex
-        quam ad, provident, porro ipsa cumque molestiae fuga deleniti facere, minus atque cum temporibus?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui velit ducimus delectus pariatur aspernatur. Ex quam ad, provident, porro ipsa cumque molestiae fuga deleniti facere, minus atque cum temporibus?</p>
     <img src="sahil.jpg" width="200" height="100" alt="Manzara" title="Ben sahilde yürüyorum.">
     <br>
     <a href="https://google.com" target="_blank">Arama Motoru</a>
