--- a/Gun03/blockinline.html
+++ b/Gun03/blockinline.html
@@ -22,7 +22,7 @@
     <hr>
 
     Bu resim
-    <img src="//picsum.photos/id/144/1000" alt="bir resim" height="64">
+    <img src="https://picsum.photos/id/144/1000" alt="bir resim" height="64">
     <em>Samed</em>'e gelsin.
 
     <hr>
